--- a/HTML/other.html
+++ b/HTML/other.html
@@ -101,13 +101,15 @@
                         <div><h3>All</h3><input class="all_btn" type="checkbox" ></div>
                     </div>
                     <div class="sort b3 bg_change">
-                        <div><h3>Brand</h3><i class="brand_icon fa-solid fa-chevron-down"></i></div>
+                        <div><h3>Product Types</h3><i class="brand_icon fa-solid fa-chevron-down"></i></div>
                         <article class="brands">
-                            <div><span>Gigabyte</span><input class="brand_btn" type="checkbox" value="Gigabyte"></div>
-                            <div><span>MSI</span><input class="brand_btn" type="checkbox" value="MSI"></div>
-                            <div><span>AsRock</span><input class="brand_btn" type="checkbox" value="AsRock"></div>
-                            <div><span>NZXT</span><input class="brand_btn" type="checkbox" value="NZXT"></div>
-                            <div><span>Asus</span><input class="brand_btn" type="checkbox" value="Asus"></div>
+                            <div><span>Graphics Card</span><input class="brand_btn" type="checkbox" value="graphics card"></div>
+                            <div><span>CPU / Processors</span><input class="brand_btn" type="checkbox" value="CPU / Processors"></div>
+                            <div><span>SSD</span><input class="brand_btn" type="checkbox" value="SSD"></div>
+                            <div><span>HDD</span><input class="brand_btn" type="checkbox" value="HDD"></div>
+                            <div><span>Power Supply Units</span><input class="brand_btn" type="checkbox" value="Power Supply Units"></div>
+                            <div><span>Mouse</span><input class="brand_btn" type="checkbox" value="mouse"></div>
+                            <div><span>KVM Switch</span><input class="brand_btn" type="checkbox" value="KVM Switch"></div>
                         </article>
                     </div>
                     <div class="sort b3 bg_change">
